--- a/style.css
+++ b/style.css
@@ -91,10 +91,37 @@ body {
 
 .box {
     width: 40%;
+    background-color: #F3F3F3;
+    border: 1px solid gray;
+    margin-left: 25px;
+    margin-right: 25px;
+    height: 450px;
+    border-radius: 25px;
+}
+
+.box h2{
+    align-items: center;
+    text-align: center;
+    font-style: normal;
+    font-weight: 900;
+    font-display: swap;
+}
+
+.box button{
+    height: 30px;
+    margin-left: 90px;
+    width: 320px;
+    cursor: pointer;
+    background-color: antiquewhite;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+}
+.box button:focus{
+    background-color: rgba(255, 255, 250, 0.1);
 }
 
 .iframe {
-    height: 500px;
-    width: 60%;
-    border: 1px solid black;
+    justify-content: space-between;
 }
