--- a/style.css
+++ b/style.css
@@ -127,9 +127,11 @@ body {
     
 }
 
-
+button span img{
+    border-radius:50%;
+}
 .box button:focus{
-    background-color: rgba(255, 255, 250, 0.1);
+    background-color: greenyellow;
 }
 
 .iframe {
